tests/paczka1/fuzzy1/40680840.err
Error in line 2: A183 A477 82,9
Error in line 5: nvR3Z A893 27,9
Error in line 3: A183 S637 4,3
Error in line 4: k4QgcHy A893 80,5
Error in line 18: WphJ9o S637 13,9
Error in line 31: nZ6e S637 13,2
